# PasswordManager

./: .gitignore  README.md  index.html  main.html  package-lock.json  package.json  password.html  vite.config.js
src/: AppMain.jsx  AppPassword.jsx  AppStart.jsx  main.css  main.jsx  password.jsx  start.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  data.rs  lib.rs
src/components/: Account.jsx  Password.jsx  PasswordList.jsx  components.css
