[package]
name = "Password_Manager"
version = "0.1.0"
description = "A Password Manager App"
authors = ["Panayiotis Angelides"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "passwordmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rusqlite = "0.32.1"
cli-clipboard = "0.4.0"
tokio = "1.41.1"
dirs = "5.0.1"
